[gd_scene load_steps=30 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy/Ghost.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/themanorfinal.png" type="Texture" id=3]
[ext_resource path="res://Scenes/3_SalaDaMansao/SalaDaMansao.gd" type="Script" id=4]
[ext_resource path="res://Musics/Hall_Music.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.75, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.75, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19.75, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 44.75, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 20.75, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 156.49, 16 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 204.512, 18.1008 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 256 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 17.6707, 120 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 197.368, 16.7393 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 13.6035, 16 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 80, 16 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 75.5, 10.977 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 19.2981, 16 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 10, 16 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 16, 46.3122 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 56, 10 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 30.0995, 29.9913 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 10, 1.4892 )

[sub_resource type="SegmentShape2D" id=21]
a = Vector2( 26.1309, 49.3126 )
b = Vector2( 25.289, 34.7205 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 17.8528, 34.0026 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 19.6169, 21.6677 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 53.4017, 10 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1018.0
margin_bottom = 600.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 906.541, 364.946 )

[node name="Ghost" parent="." instance=ExtResource( 2 )]
position = Vector2( 105, 171 )

[node name="PortaQuarto" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortaQuarto"]
position = Vector2( 668, 121 )
shape = SubResource( 1 )

[node name="PortaBanheiro" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortaBanheiro"]
position = Vector2( 702, 318 )
shape = SubResource( 2 )

[node name="PortaEscritorio" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortaEscritorio"]
position = Vector2( 351, 122 )
shape = SubResource( 3 )

[node name="PortaSaida" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortaSaida"]
position = Vector2( 504, 553 )
shape = SubResource( 4 )

[node name="PortaPorao" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortaPorao"]
position = Vector2( 911, 318 )
shape = SubResource( 5 )

[node name="Parede" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Parede"]
position = Vector2( 200, 96 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Parede"]
position = Vector2( 512, 96 )
shape = SubResource( 6 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Parede"]
position = Vector2( 824.5, 95.5 )
shape = SubResource( 6 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Parede"]
position = Vector2( 251.362, 214.807 )
shape = SubResource( 7 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Parede"]
position = Vector2( 56, 296 )
shape = SubResource( 8 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Parede"]
position = Vector2( 579.753, 328.944 )
shape = SubResource( 9 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Parede"]
position = Vector2( 440, 328 )
shape = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parede"]
position = Vector2( 761.751, 216 )
shape = SubResource( 10 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Parede"]
position = Vector2( 968, 296 )
shape = SubResource( 8 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Parede"]
position = Vector2( 248, 552 )
shape = SubResource( 7 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Parede"]
position = Vector2( 768, 552 )
shape = SubResource( 7 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Parede"]
position = Vector2( 608, 304 )
shape = SubResource( 11 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Parede"]
position = Vector2( 664, 304 )
shape = SubResource( 11 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="Parede"]
position = Vector2( 672, 304 )
shape = SubResource( 11 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="Parede"]
position = Vector2( 635.121, 320.933 )
shape = SubResource( 12 )

[node name="CollisionShape2D16" type="CollisionShape2D" parent="Parede"]
position = Vector2( 808, 304 )
shape = SubResource( 13 )

[node name="CollisionShape2D17" type="CollisionShape2D" parent="Parede"]
position = Vector2( 944, 304 )
shape = SubResource( 11 )

[node name="CollisionShape2D18" type="CollisionShape2D" parent="Parede"]
position = Vector2( 144, 328 )
shape = SubResource( 14 )

[node name="CollisionShape2D19" type="CollisionShape2D" parent="Parede"]
position = Vector2( 264, 320 )
shape = SubResource( 15 )

[node name="CollisionShape2D20" type="CollisionShape2D" parent="Parede"]
position = Vector2( 232, 304 )
shape = SubResource( 16 )

[node name="CollisionShape2D21" type="CollisionShape2D" parent="Parede"]
position = Vector2( 296, 304 )
shape = SubResource( 16 )

[node name="CollisionShape2D22" type="CollisionShape2D" parent="Parede"]
position = Vector2( 86.9783, 375.305 )
shape = SubResource( 17 )

[node name="CollisionShape2D26" type="CollisionShape2D" parent="Parede"]
position = Vector2( 360, 328 )
shape = SubResource( 18 )

[node name="CollisionShape2D27" type="CollisionShape2D" parent="Parede"]
position = Vector2( 278.607, 510.607 )
shape = SubResource( 19 )

[node name="CollisionShape2D28" type="CollisionShape2D" parent="Parede"]
position = Vector2( 231.562, 502.812 )
shape = SubResource( 20 )

[node name="CollisionShape2D29" type="CollisionShape2D" parent="Parede"]
position = Vector2( 325.112, 502.562 )
shape = SubResource( 20 )

[node name="CollisionShape2D30" type="CollisionShape2D" parent="Parede"]
position = Vector2( 308.049, 453.336 )
shape = SubResource( 21 )

[node name="CollisionShape2D31" type="CollisionShape2D" parent="Parede"]
position = Vector2( 198.329, 454.178 )
shape = SubResource( 21 )

[node name="moveis" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="moveis"]
position = Vector2( 725.397, 428.753 )
shape = SubResource( 22 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="moveis"]
position = Vector2( 888.147, 426.753 )
shape = SubResource( 22 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="moveis"]
position = Vector2( 809.86, 417.668 )
shape = SubResource( 23 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="moveis"]
position = Vector2( 875.751, 132.819 )
shape = SubResource( 24 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
autoplay = true

[connection signal="body_entered" from="PortaQuarto" to="." method="_on_PortaQuarto_body_entered"]
[connection signal="body_exited" from="PortaQuarto" to="." method="_on_PortaQuarto_body_exited"]
[connection signal="body_entered" from="PortaBanheiro" to="." method="_on_PortaBanheiro_body_entered"]
[connection signal="body_entered" from="PortaEscritorio" to="." method="_on_PortaEscritorio_body_entered"]
[connection signal="body_entered" from="PortaSaida" to="." method="_on_PortaSaida_body_entered"]
[connection signal="body_exited" from="PortaSaida" to="." method="_on_PortaSaida_body_exited"]
[connection signal="body_entered" from="PortaPorao" to="." method="_on_PortaPorao_body_entered"]
